--- a/acp.ipynb
+++ b/acp.ipynb
@@ -1,12 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyse en Composantes Principales (ACP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importation des librairies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bdd import ConnexionMongoDB\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -17,13 +30,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chargement des données"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from bdd import ConnexionMongoDB\n",
+    "# Connexion à la base de données\n",
     "conn = ConnexionMongoDB()\n",
-    "data = conn.userTweets(10000)\n"
+    "# Récupération des données de la collection userTweets\n",
+    "data = conn.userTweets(10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualisation des informations"
    ]
   },
   {
@@ -149,6 +179,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   nbtweet      10000 non-null  int64  \n",
+      " 1   ftweets      10000 non-null  float64\n",
+      " 2   agressivity  10000 non-null  float64\n",
+      " 3   visibility   10000 non-null  float64\n",
+      " 4   avgUrls      10000 non-null  float64\n",
+      " 5   ratio        10000 non-null  float64\n",
+      " 6   avgMention   10000 non-null  float64\n",
+      " 7   avgHashtag   10000 non-null  float64\n",
+      "dtypes: float64(7), int64(1)\n",
+      "memory usage: 625.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scatter matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -238,6 +306,13 @@
    ],
    "source": [
     "scatter_matrix(data, figsize=(9,9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ACP"
    ]
   },
   {
@@ -343,6 +418,7 @@
     }
    ],
    "source": [
+    "# Méthode du coude\n",
     "plt.figure(1)\n",
     "plt.plot(np.arange(1, n+1), eigval)\n",
     "plt.title(\"Scree plot\")\n",
@@ -436,8 +512,8 @@
     }
    ],
    "source": [
+    "# Cercle des corrélations pour les axes 1 et 2\n",
     "plt.figure(3)\n",
-    "# Cercle des corrélations pour les deux premiers axes\n",
     "fig, axes = plt.subplots(figsize=(8,8))\n",
     "\n",
     "# les points\n",
@@ -579,7 +655,7 @@
     }
    ],
    "source": [
-    "# Contributions des variables aux axes \n",
+    "# Contribution des variables aux composantes 1 et 2 \n",
     "ctrvar = corvar**2\n",
     "for j in range(8):\n",
     "  ctrvar[:,j] = np.round(ctrvar[:,j]/eigval[j], 6)\n",
@@ -603,6 +679,7 @@
     }
    ],
    "source": [
+    "# 1er plan factoriel\n",
     "plt.figure(4)\n",
     "plt.scatter(coord[:, 0], coord[:, 1], s=50, alpha=0.5)\n",
     "plt.title('Premier plan factoriel')\n",
@@ -715,7 +792,7 @@
     }
    ],
    "source": [
-    "# 2ème plan factoriel\n",
+    "# Contribution des variables sur les composantes 3 et 4\n",
     "pd.DataFrame({'id':data.columns, 'COR3':corvar[:,2], 'COR4':corvar[:,3]})"
    ]
   },
@@ -745,18 +822,15 @@
     }
    ],
    "source": [
-    "plt.figure(5)\n",
     "# Cercle des corrélations pour les axes 3 et 4\n",
+    "plt.figure(5)\n",
     "fig, axes = plt.subplots(figsize=(8,8))\n",
-    "\n",
-    "# les points\n",
-    "#plt.scatter(corvar[:,2],corvar[:,3])\n",
     "\n",
     "for i in range(0, acp.components_.shape[1]):\n",
     "    axes.arrow(0,\n",
-    "             0,  # Start the arrow at the origin\n",
+    "             0,  \n",
     "             corvar[i,2],\n",
-    "             corvar[i,3],  #1 for PC2  \n",
+    "             corvar[i,3],  \n",
     "             color='blue')\n",
     "\n",
     "# affichage des étiquettes (noms des variables)\n",
@@ -780,112 +854,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>CTR_3</th>\n",
-       "      <th>CTR_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>nbtweet</td>\n",
-       "      <td>0.520133</td>\n",
-       "      <td>0.038382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ftweets</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>0.000152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>agressivity</td>\n",
-       "      <td>0.000034</td>\n",
-       "      <td>0.000152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>visibility</td>\n",
-       "      <td>0.001542</td>\n",
-       "      <td>0.001897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>avgUrls</td>\n",
-       "      <td>0.079311</td>\n",
-       "      <td>0.029086</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ratio</td>\n",
-       "      <td>0.273784</td>\n",
-       "      <td>0.422360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>avgMention</td>\n",
-       "      <td>0.105702</td>\n",
-       "      <td>0.355869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>avgHashtag</td>\n",
-       "      <td>0.019462</td>\n",
-       "      <td>0.152102</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id     CTR_3     CTR_4\n",
-       "0      nbtweet  0.520133  0.038382\n",
-       "1      ftweets  0.000031  0.000152\n",
-       "2  agressivity  0.000034  0.000152\n",
-       "3   visibility  0.001542  0.001897\n",
-       "4      avgUrls  0.079311  0.029086\n",
-       "5        ratio  0.273784  0.422360\n",
-       "6   avgMention  0.105702  0.355869\n",
-       "7   avgHashtag  0.019462  0.152102"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Contributions des variables aux axes 3 et 4\n",
-    "pd.DataFrame({'id':data.columns,'CTR_3':ctrvar[:,2],'CTR_4':ctrvar[:,3]})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -901,6 +869,7 @@
     }
    ],
    "source": [
+    "# 2ème plan factoriel\n",
     "plt.figure(6)\n",
     "plt.scatter(coord[:, 2], coord[:, 3], s=50, alpha=0.5)\n",
     "plt.title('Deuxième plan factoriel')\n",
